--- a/index.htm
+++ b/index.htm
@@ -20,6 +20,9 @@
             <div id="logo">
                 <a href="#"><img src="" title="SECO" alt=""></a>
             </div>
+            <div class="heading">
+                <h1>SECO web guide: top-10 protocol</h1>
+            </div>
             <div>
                 <nav id="main-nav">
                 <ul id="main-nav-menu">
