boilder plate html adjust, nav

--- a/index.htm
+++ b/index.htm
@@ -29,8 +29,8 @@
                     <li class="nav-parent"><a href="">One</a><i class="fa fa-arrow-down"></i>
                         <ul class="drop-down">
                             <li><a href="">one - a</a></li>
-                            <li><a href="">one - a</a></li>
-                            <li><a href="">one - a</a></li>
+                            <li><a href="">one - b</a></li>
+                            <li><a href="">one - c</a></li>
                         </ul>
                     </li>
                 </ul>
