--- a/index.htm
+++ b/index.htm
@@ -11,6 +11,12 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="">
         <script src="https://use.fontawesome.com/5e8e588708.js"></script>
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+    integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
+        integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous">
+    </script>
+
     </head>
     <body>
         <!--[if lt IE 7]>
@@ -28,7 +34,7 @@
                 <ul id="main-nav-menu">
                     <li class="nav-parent"><a href="">One</a><i class="fa fa-arrow-down"></i>
                         <ul class="drop-down">
-                            <li><a href="">one - a</a></li>
+                            <li><a href="/pages/about.html">about</a></li>
                             <li><a href="">one - b</a></li>
                             <li><a href="">one - c</a></li>
                         </ul>
