adding more functionality to vanilla site

--- a/index.htm
+++ b/index.htm
@@ -22,27 +22,31 @@
         <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-        <header>
-            <div id="logo">
-                <a href="#"><img src="" title="SECO" alt=""></a>
-            </div>
-            <div class="heading">
-                <h1>SECO web guide: top-10 protocol</h1>
-            </div>
-            <div>
-                <nav id="main-nav">
-                <ul id="main-nav-menu">
-                    <li class="nav-parent"><a href="">One</a><i class="fa fa-arrow-down"></i>
-                        <ul class="drop-down">
-                            <li><a href="/pages/about.html">about</a></li>
-                            <li><a href="">one - b</a></li>
-                            <li><a href="">one - c</a></li>
-                        </ul>
-                    </li>
-                </ul>
-                </nav>
-            </div>
-        </header>
+         <header>
+             <div id="logo">
+                 <a href="#"><img src="" title="SECO" alt=""></a>
+             </div>
+             <div class="heading">
+                 <h1>SECO web guide: top-10 protocol</h1>
+             </div>
+             <div>
+                 <nav id="main-nav">
+                     <ul id="main-nav-menu">
+                         <li class="nav-parent"><a id="hamburger" href="#">
+                                 <div></div>
+                                 <div></div>
+                                 <div></div>
+                             </a><i class="fa fa-arrow-down"></i>
+                             <ul class="drop-down">
+                                 <li><a href="/">home</a></li>
+                                 <li><a href="/pages/about.html">about</a></li>
+                                 <li><a href="/pages/inputform.html">form</a></li>
+                             </ul>
+                         </li>
+                     </ul>
+                 </nav>
+             </div>
+         </header>
         <main>
             
         </main>
