adding css scafolding, bootstrap and fa

--- a/index.htm
+++ b/index.htm
@@ -13,6 +13,7 @@
         <script src="https://use.fontawesome.com/5e8e588708.js"></script>
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
     integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+    <link rel="stylesheet" href="/styles/styles.css" >
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
         integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous">
     </script>
@@ -46,12 +47,16 @@
                      </ul>
                  </nav>
              </div>
+             <hr>
          </header>
         <main>
-            
+            <div class="row">  </div>
+            <hr>
+            <div class="row"> </div>
         </main>
 
         <footer>
+            <hr>
             <div>
                 <div class="footer-col">
                     <ul id="">
@@ -70,3 +75,4 @@
         <script src="" async defer></script>
     </body>
 </html>
+
