content dev commit

--- a/pages/about.html
+++ b/pages/about.html
@@ -17,7 +17,7 @@
                  <a href="#"><img src="" title="SECO" alt=""></a>
              </div>
              <div class="heading">
-                 <h1>SECO web guide: top-10 protocol</h1>
+                 <h1>About this guide</h1>
              </div>
              <div>
                  <nav id="main-nav">
