content dev commit

--- a/index.htm
+++ b/index.htm
@@ -9,7 +9,7 @@
         <title>Top 10 SECO web-guide</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="icon" href="/favicon.ico" />
+        <link rel="icon" href="favicon.png" />
         <script src="https://use.fontawesome.com/5e8e588708.js"></script>
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
     integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
